[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/pause.gd" type="Script" id=1]
[ext_resource path="res://menu/index.png" type="Texture" id=2]
[ext_resource path="res://menu/LemonMilk.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="pause" type="CanvasLayer"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 0.464078, 0.483333, 0.461098, 0.491726 )
position = Vector2( 524.225, 297.059 )
scale = Vector2( 4.66474, 2.70629 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="pauseLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -144.0
margin_right = 143.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="reprendreButton" type="Button" parent="." index="2"]

modulate = Color( 0.714844, 0.714844, 0.714844, 1 )
self_modulate = Color( 0.839844, 0.839844, 0.839844, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -37.0
margin_right = 113.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 7
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reprendre"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility" ]

[node name="menuButton" type="Button" parent="." index="3"]

modulate = Color( 0.714844, 0.714844, 0.714844, 1 )
self_modulate = Color( 0.839844, 0.839844, 0.839844, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 57.0
margin_right = 113.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 7
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu Principal"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility" ]

[node name="leaveButton" type="Button" parent="." index="4"]

modulate = Color( 0.714844, 0.714844, 0.714844, 1 )
self_modulate = Color( 0.839844, 0.839844, 0.839844, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 152.0
margin_right = 113.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 7
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quitter"
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Visibility" ]


